fix: dark mode bg color

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -36,7 +36,7 @@ body {
     line-height: 1.9rem;
     display: inline-block;
 
-    background-color: #eee;
+    background-color: #eeeeee;
 
     padding-left: 0.2rem;
     padding-right: 0.2rem;
@@ -46,4 +46,8 @@ body {
 
     /* Reset code font preference */
     font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+}
+
+.theme--dark .post__content code {
+    background-color: #464646;
 }
